# src/api/controllers/user.ts
@@ -10,7 +10,7 @@ export function auth(req: express.Request, res: express.Response, next: express.
     .then(authResponse => {
       if (!(authResponse as any).error) {
         res.locals.auth = {
-          userId: (authResponse as {userId: string}).userId
+          userId: (authResponse as { userId: string }).userId
         };
         next();
       } else {
@@ -18,12 +18,12 @@ export function auth(req: express.Request, res: express.Response, next: express.
       }
     })
     .catch(err => {
-      writeJsonResponse(res, 500, {error: {type: 'internal_server_error', message: 'Internal Server Error'}});
+      writeJsonResponse(res, 500, { error: { type: 'internal_server_error', message: 'Internal Server Error' } });
     });
 }
 
 export function createUser(req: express.Request, res: express.Response): void {
-  const {email, password, name} = req.body;
+  const { email, password, name } = req.body;
 
   UserService.createUser(email, password, name)
     .then(resp => {
@@ -39,6 +39,28 @@ export function createUser(req: express.Request, res: express.Response): void {
     })
     .catch((err: any) => {
       logger.error(`createUser: ${err}`);
-      writeJsonResponse(res, 500, {error: {type: 'internal_server_error', message: 'Internal Server Error'}});
+      writeJsonResponse(res, 500, { error: { type: 'internal_server_error', message: 'Internal Server Error' } });
+    });
+}
+
+export function login(req: express.Request, res: express.Response): void {
+  const { email, password } = req.body;
+
+  UserService.login(email, password)
+    .then(resp => {
+      if ((resp as any).error) {
+        if ((resp as ErrorResponse).error.type === 'invalid_credentials') {
+          writeJsonResponse(res, 404, resp);
+        } else {
+          throw new Error(`unsupported ${resp}`);
+        }
+      } else {
+        const { userId, token, expireAt } = resp as { token: string, userId: string, expireAt: Date };
+        writeJsonResponse(res, 200, { userId: userId, token: token }, { 'X-Expires-After': expireAt.toISOString() });
+      }
+    })
+    .catch((err: any) => {
+      logger.error(`login: ${err}`);
+      writeJsonResponse(res, 500, { error: { type: 'internal_server_error', message: 'Internal Server Error' } });
     });
 }
